# hcompliance

./: .gitignore  README.md  input_data.xlsx  lookup1.xlsx  pyproject.toml  requirements.txt  updated_input_data.xlsx  vlookup.py  vlookup1.py
hmda/: main.py
hmda/config/: vcode.json
hmda/core/: config_loader.py  event_tracker.py  excel_parser.py  file_replacer.py
hmda/gui/: app.py  event_log_screen.py  hello_world.py  vcode_replacer_screen.py  warning_screen.py
hmda/services/: vcode_service.py
hmda/test/: test1.xlsx
hmda/utils/: logger.py
